syntax = "proto3";

option java_multiple_files = true; 
option java_package = "billing"; 

service BillingService {
  rpc CreateBillingAccount(BillingRequest) returns (BillingResponse); 
  rpc DeleteBillingAccount(BillingRequestDelete) returns (BillingResponse); 
  rpc isBillingExistForPatientID(BillingRequestDelete) returns (isExistResponse);
}

message isExistResponse {
    bool isExist = 1; 
}  

message BillingRequestDelete {
   string patientID = 1; 
} 

message BillingRequest {
   string patientID = 1; 
   string name = 2; 
   string registrationNo = 3; 
} 

message BillingResponse {
   string accountID = 1; 
   string patientName = 2; 
   string status = 3; 
}
